syntax = "proto2";
package yjprotogo;
// ProtoHeader 需要在每个 Message 中作为第一个字段
message ProtoHeader {
    optional string version = 1; // 版本号
    optional uint32 userId = 2; // 用户 id
    optional int32 code = 3; // result code
    optional string error = 4; // result error description
}

//表示玩家掉线
message cm_offline {
}

//表示心跳
message cm_hearbeat {
}